objects/ASI_KOR_Sub_Brand__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Active_for_A_P__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active for A&amp;P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand_Code__c</fullName>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand_Name__c</fullName>
        <label>Brand  Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipLabel>Product Items</relationshipLabel>
        <relationshipName>Sub_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_KPI_Point__c</fullName>
        <label>KPI Point Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Manufacturer__c</fullName>
        <defaultValue>&quot;222&quot;</defaultValue>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Name_Kor__c</fullName>
        <label>Name-Kor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boxes (BOX)</fullName>
                </value>
                <value>
                    <fullName>Brandies (BRD)</fullName>
                </value>
                <value>
                    <fullName>Gin (OTG)</fullName>
                </value>
                <value>
                    <fullName>Liquor (OTL)</fullName>
                </value>
                <value>
                    <fullName>Rum (OTR)</fullName>
                </value>
                <value>
                    <fullName>Tequila (OTT)</fullName>
                </value>
                <value>
                    <fullName>Vodka (OTV)</fullName>
                </value>
                <value>
                    <fullName>Pos Items (POS)</fullName>
                </value>
                <value>
                    <fullName>Bourbon Whisky (WHB)</fullName>
                </value>
                <value>
                    <fullName>Irish Whisky (WHI)</fullName>
                </value>
                <value>
                    <fullName>Scotch Whisky (WHS)</fullName>
                </value>
                <value>
                    <fullName>Sparkling Wines (WIS)</fullName>
                </value>
                <value>
                    <fullName>Still Wines (WIT)</fullName>
                </value>
                <value>
                    <fullName>Others (777)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sub_Brand_Code__c</fullName>
        <externalId>true</externalId>
        <label>Sub-Brand Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_KOR_Brand_Code__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Brand_Name__c</columns>
        <columns>NAME</columns>
        <columns>ASI_KOR_Active_for_A_P__c</columns>
        <columns>ASI_KOR_Manufacturer__c</columns>
        <columns>ASI_KOR_Sub_Brand_Code__c</columns>
        <columns>ASI_KOR_Product_Category__c</columns>
        <columns>ASI_KOR_KPI_Point__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_View</fullName>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Brand_Code__c</columns>
        <columns>ASI_KOR_Brand_Name__c</columns>
        <columns>ASI_KOR_Sub_Brand_Code__c</columns>
        <columns>NAME</columns>
        <columns>ASI_KOR_KPI_Point__c</columns>
        <columns>ASI_KOR_Description__c</columns>
        <columns>ASI_KOR_Name_Kor__c</columns>
        <columns>ASI_KOR_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>New View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sub-Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>